# GLSL-BLAS

./: .gitignore  README.md
.github/workflows/: ci.yml
c++/: CMakeLists.txt  Example.cpp  Example.hpp
c++/src/: main.cpp
c++/test/: CMakeLists.txt  ExampleTests.cpp
glsl/: dasum.comp  dasum.spv  daxpy.comp  daxpy.spv  ddot.comp  ddot.spv  dgemm.comp  dgemm.spv  dgemv.comp  dgemv.spv  dnrm2.comp  dnrm2.spv  dscal.comp  dscal.spv  idamax.comp  idamax.spv  isamax.comp  isamax.spv  isamax_f.comp  isamax_partial.comp  p_max.comp  p_sum.comp  plus.comp  sasum.comp  sasum.spv  sasum_f.comp  sasum_f_alt.comp  sasum_global.comp  sasum_p.comp  sasum_partial.comp  sasum_subgroup.comp  sasum_workgroup.comp  saxpy.comp  sdot.comp  sdot.spv  sdot_f.comp  sdot_partial.comp  sdot_partial.spv_e.comp  sgemm.comp  sgemm.spv  (+12 more)
rust/: Cargo.toml
rust/benches/: benches.rs
rust/tests/: tests.rs
spir-v/: atomicArraySum.spv  sasum.spv  saxpy.spv  sdot.spv  sgemv.spv  sgemv2.spv  sgemv_short.spv  snrm2.spv  sscal.spv
tests/: tests.rs
